Generate bootable multiboot image with grub-mkrescue

--- a/multiboot/hello-world/Makefile
+++ b/multiboot/hello-world/Makefile
@@ -1,4 +1,11 @@
-# main.elf is the main output: the multiboot file.
+.POSIX:
+.PHONY: clean run rub-img
+
+main.img: main.elf
+	cp '$<' iso/boot
+	grub-mkrescue -o '$@' iso
+
+# main.elf is the the multiboot file.
 main.elf: entry.o main.o
 	ld -m elf_i386 -nostdlib -T linker.ld -o '$@' $^
 
@@ -9,9 +16,10 @@ main.o: main.c
 	gcc -c -m32 -std=c99 -ffreestanding -fno-builtin -Os -o '$@' -Wall -Wextra '$<'
 
 clean:
-	rm -f *.elf *.o
+	rm -f *.elf *.o iso/boot/*.elf *.img
 
 run: main.elf
 	qemu-system-i386 -kernel '$<'
 
-.PHONY: clean run
+run-img: main.img
+	qemu-system-i386 -hda '$<'
