Make osdev example more uniform with the hello world

--- a/multiboot/osdev/Makefile
+++ b/multiboot/osdev/Makefile
@@ -1,21 +1,22 @@
 .POSIX:
 
-BIN := isodir/boot/main.bin
-MAIN := main.iso
+ISODIR := iso
+MULTIBOOT := $(ISODIR)/boot/main.elf
+MAIN := main.img
 
 .PHONY: clean run
 
 $(MAIN):
 	as -32 boot.S -o boot.o
 	gcc -c kernel.c -ffreestanding -m32 -o kernel.o -std=gnu99
-	gcc -ffreestanding -m32 -nostdlib -o '$(BIN)' -T linker.ld boot.o kernel.o -lgcc
-	grub-mkrescue -o main.iso isodir
+	gcc -ffreestanding -m32 -nostdlib -o '$(MULTIBOOT)' -T linker.ld boot.o kernel.o -lgcc
+	grub-mkrescue -o '$@' '$(ISODIR)'
 
 clean:
-	rm -f *.o '$(BIN)' '$(MAIN)'
+	rm -f *.o '$(MULTIBOOT)' '$(MAIN)'
 
 run: $(MAIN)
 	qemu-system-i386 -cdrom '$(MAIN)'
 	# Would also work.
 	#qemu-system-i386 -hda '$(MAIN)'
-	#qemu-system-i386 -kernel myos.bin
+	#qemu-system-i386 -kernel '$(MULTIBOOT)'
