big-img, chainload self

--- a/grub/chainloader/iso/boot/grub/grub.cfg
+++ b/grub/chainloader/iso/boot/grub/grub.cfg
@@ -1,5 +1,7 @@
-set timeout=0
-set default="0"
-menuentry "main" {
+menuentry "hello-world" {
     chainloader /boot/main.img
+}
+# Reload ourselves again.
+menuentry "self +1" {
+    chainloader +1
 }
